add logic for WebSocket in all MicroServices